# Ops-AI-Cortex

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: 00_overview.md  01_scope.md  02_architecture.md  03_tech_stack.md  04_milestones.md  05_risks_and_assumptions.md  06_agentkit_repositioning.md  07_status.md  08_build_plan.md  structure.md
src/ops_ai_cortex/: __init__.py  main.py
src/ops_ai_cortex/api/: main.py
src/ops_ai_cortex/auth/: dependencies.py  models.py  routes.py  schemas.py  utils.py
src/ops_ai_cortex/config/: config.py  config.yaml
src/ops_ai_cortex/core/: db.py  models.py
src/ops_ai_cortex/go_services/: go.mod  main.go
tests/: test_smoke.py
