[project]
name = "ops_ai_cortex"
version = "0.1.0"
description = "AI-driven DevOps intelligence platform"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi",
  "langchain",
  "redis",
  "psycopg2-binary",
  "anthropic",
  "openai",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "uvicorn",
  "python-jose[cryptography]>=3.5.0",
  "passlib[bcrypt]>=1.7.4",
  "fastapi-users-db-sqlalchemy>=7.0.0",
  "email-validator>=2.3.0",
]

# ✅ modern uv / PEP 621–style dev group
[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "black>=24.4.0",
  "ruff>=0.6.5",
  "mypy>=1.10.0",
  "httpx>=0.27.0",
  "pytest-asyncio>=0.23.7",
  "types-pyyaml>=6.0.12.20250915",
  "types-passlib>=1.7.7.20250602",
  "types-python-jose>=3.5.0.20250531",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
